# cppq

./: .gitignore  CMakeLists.txt  cppq.hpp  tests.cpp
cli/: main.py
web/: Dockerfile
web/src/app/api/debug/queue/[queue]/: route.ts
web/src/app/api/queue/: route.ts
web/src/app/api/queue/[queue]/[state]/tasks/: route.ts
web/src/app/api/queue/[queue]/memory/: route.ts
web/src/app/api/queue/[queue]/pause/: route.ts
web/src/app/api/queue/[queue]/stats/: route.ts
web/src/app/api/queue/[queue]/unpause/: route.ts
web/src/app/api/redis/connect/: route.ts
web/src/app/api/test-redis/: route.ts
web/src/app/queue/[queue]/stats/: page.tsx
web/src/components/: QueueDetail.tsx
web/src/lib/: redis-singleton.ts  redis.ts
